feat: add pagination support to product list query
Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>